welcome.lessons.welcome.variables.Variables.scala.error
Variables:7: error: not found: value n
while (r!=n) {recule();r=r+1;} 
          ^