welcome.lessons.welcome.variables.Variables.scala.code
while (!estSurBiscuit()){
	var n=0
	n=n+1;avance;
}
prendBiscuit()
var r: Int=0
while (r!=n) {recule();r=r+1;}